--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
   <div class="page">
-
+    <header class="header">
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?</p>
+      <div class="header__link"></div>
+      <div class="header__illustration"></div>
+      <div class="header__square-pic"></div>
+    </header>
   </div>
 </body>
 </html>
