--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
 </head>
 <body>
   <div class="page">
@@ -12,7 +14,9 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?</p>
       <div class="header__link"></div>
-      <div class="header__illustration"></div>
+      <div class="header__main-illustration">
+        <img src="./images/header-image.png" alt="мальчик-обложка" class="header__main-illustration__image">
+      </div>
       <div class="header__square-pic"></div>
     </header>
   </div>
