--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <body>
 <div class="page">
     <header class="header">
-      <div class=" logo logo_place_header"></div>
+      <div class="logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &rarr;</a>
-      </p>
-
-        <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик-обложка">
+      <a href="#" class="header__link">Узнать &rarr;</a>
+    </p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик-обложка">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -36,37 +35,37 @@
         <h2 class="section-title section-title_theme_white"> Цифры и факты</h2>
         <h3 class="section-subtitle section-subtitle_theme_white"> Про учебу и мозг</h3>
         <ul class="table table_theme_white">
-            <li class="table__cell table_cell_theme_white" >
+            <li class="table__cell table__cell_theme_white">
              <h4 class="table__heading table__heading_theme_white">86 миллиардов</h4>
              <p class="table__text table__text_theme_white">Число нейронов в мозге человека</p>
             </li>
-            <li class="table__cell table_cell_theme_white" >
+            <li class="table__cell table__cell_theme_white">
               <h4 class="table__heading table__heading_theme_white">2.1 миллиарда</h4>
               <p class="table__text table__text_theme_white">Число нуждающихся в повышении квалификации</p>
                 <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
              </li>
-             <li class="table__cell table_cell_theme_white" >
+             <li class="table__cell table__cell_theme_white">
               <h4 class="table__heading table__heading_theme_white">1000 терабайт</h4>
               <p class="table__text table__text_theme_white">Объём памяти человека</p>
              </li>
-             <li class="table__cell table_cell_theme_white" >
+             <li class="table__cell table__cell_theme_white">
               <h4 class="table__heading table__heading_theme_white">500 триллионов</h4>
               <p class="table__text table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</p>
              </li>
-             <li class="table__cell table_cell_theme_white" >
+             <li class="table__cell table__cell_theme_white">
               <h4 class="table__heading table__heading_theme_white">420 миллионов</h4>
               <p class="table__text table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
                 <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
              </li>
-             <li class="table__cell table_cell_theme_white" >
+             <li class="table__cell table__cell_theme_white">
               <h4 class="table__heading table__heading_theme_white">17–20 лет</h4>
               <p class="table__text table__text_theme_white">Пик обучаемости</p>
              </li>
-             <li class="table__cell table_cell_theme_white" >
+             <li class="table__cell table__cell_theme_white">
               <h4 class="table__heading table__heading_theme_white">1885 год</h4>
               <p class="table__text table__text_theme_white">Открытие кривой забывания</p>
              </li>
-             <li class="table__cell table_cell_theme_white" >
+             <li class="table__cell table__cell_theme_white">
               <h4 class="table__heading table__heading_theme_white">1889 год</h4>
               <p class="table__text table__text_theme_white">Открытие условного рефлекса</p>
              </li>
@@ -76,8 +75,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img class="feynman__illustration" src="./images/feynman.png"  alt="Фейнман"></img>
-
+        <img class="feynman__illustration" src="./images/feynman.png"  alt="Фейнман">
       </section>
       <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
