--- a/index.html
+++ b/index.html
@@ -81,53 +81,53 @@
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
           <ul class="table table_theme_dark">
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
             <p class="table__text table__text_theme_dark"> Выберите привлекательный проект.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">2</h4>
             <p class="table__text table__text_theme_dark"> Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">3</h4>
             <p class="table__text table__text_theme_dark"> Определите целевой уровень мастерства.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">4</h4>
             <p class="table__text table__text_theme_dark"> Разбейте навык на элементы.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">5</h4>
             <p class="table__text table__text_theme_dark"> Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">6</h4>
             <p class="table__text table__text_theme_dark"> Устраните препятствия для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">7</h4>
             <p class="table__text table__text_theme_dark"> Выделите специальное время для занятий.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">8</h4>
             <p class="table__text table__text_theme_dark"> Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">9</h4>
             <p class="table__text table__text_theme_dark"> Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table__cell table__cell_theme_dark" >
+          <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">10</h4>
             <p class="table__text table__text_theme_dark"> Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-            <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="треугольник"></img>
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="треугольник">
       </section>
         </main>
         <footer class="footer">
           <div class="footer__columns">
-            <div class=" footer__column footer__column_content_copyright">
+            <div class="footer__column footer__column_content_copyright">
               <div class="logo__place_footer"></div>
               <div class="footer__author"> &copy Медовник Даниил</div>
             </div>
@@ -140,7 +140,6 @@
                 <li><a href="#" class="footer__column-link">Наставники</a></li>
                 </ul>
             </div>
-
             <div class=" footer__column footer__column_content_social">
             <h3 class="footer__column-heading"> Соцсети</h3>
               <ul class="footer__column-links">
@@ -160,8 +159,6 @@
             </div>
           </div>
         </footer>
-
-
     </div>
 </body>
 </html>
