--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
       <a href="#" class="header__link">Узнать &rarr;</a>
     </p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик-обложка">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик получил двойку">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -122,24 +122,24 @@
             <p class="table__text table__text_theme_dark"> Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="треугольник">
+        <div class="kaufman__triangle"></div>
       </section>
         </main>
         <footer class="footer">
           <div class="footer__columns">
             <div class="footer__column footer__column_content_copyright">
               <div class="logo__place_footer"></div>
-              <div class="footer__author"> &copy Медовник Даниил</div>
+              <p class="footer__author"> &copy Медовник Даниил</p>
             </div>
 
-            <div class="footer__column footer__column_content_info">
+            <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading"> О практикуме</h3>
               <ul class="footer__column-links">
                <li><a href="#" class="footer__column-link">Главная</a></li>
                 <li><a href="#" class="footer__column-link">Концепция</a></li>
                 <li><a href="#" class="footer__column-link">Наставники</a></li>
                 </ul>
-            </div>
+              </nav>
             <div class=" footer__column footer__column_content_social">
             <h3 class="footer__column-heading"> Соцсети</h3>
               <ul class="footer__column-links">
