--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-<div class="page">
+  <div class="page">
     <header class="header">
       <div class="logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#" class="header__link">Узнать &rarr;</a>
-    </p>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни?
+        <a href="#" class="header__link">Узнать &rarr;</a>
+      </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик получил двойку">
       <div class="header__square-pic"></div>
     </header>
@@ -23,11 +24,16 @@
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше
+              сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит
+              пользы.</p>
             <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод:</span>
-               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-               <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
@@ -35,52 +41,54 @@
         <h2 class="section-title section-title_theme_white"> Цифры и факты</h2>
         <h3 class="section-subtitle section-subtitle_theme_white"> Про учебу и мозг</h3>
         <ul class="table table_theme_white">
-            <li class="table__cell table__cell_theme_white">
-             <h4 class="table__heading table__heading_theme_white">86 миллиардов</h4>
-             <p class="table__text table__text_theme_white">Число нейронов в мозге человека</p>
-            </li>
-            <li class="table__cell table__cell_theme_white">
-              <h4 class="table__heading table__heading_theme_white">2.1 миллиарда</h4>
-              <p class="table__text table__text_theme_white">Число нуждающихся в повышении квалификации</p>
-                <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
-             </li>
-             <li class="table__cell table__cell_theme_white">
-              <h4 class="table__heading table__heading_theme_white">1000 терабайт</h4>
-              <p class="table__text table__text_theme_white">Объём памяти человека</p>
-             </li>
-             <li class="table__cell table__cell_theme_white">
-              <h4 class="table__heading table__heading_theme_white">500 триллионов</h4>
-              <p class="table__text table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-             </li>
-             <li class="table__cell table__cell_theme_white">
-              <h4 class="table__heading table__heading_theme_white">420 миллионов</h4>
-              <p class="table__text table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-                <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
-             </li>
-             <li class="table__cell table__cell_theme_white">
-              <h4 class="table__heading table__heading_theme_white">17–20 лет</h4>
-              <p class="table__text table__text_theme_white">Пик обучаемости</p>
-             </li>
-             <li class="table__cell table__cell_theme_white">
-              <h4 class="table__heading table__heading_theme_white">1885 год</h4>
-              <p class="table__text table__text_theme_white">Открытие кривой забывания</p>
-             </li>
-             <li class="table__cell table__cell_theme_white">
-              <h4 class="table__heading table__heading_theme_white">1889 год</h4>
-              <p class="table__text table__text_theme_white">Открытие условного рефлекса</p>
-             </li>
+          <li class="table__cell table__cell_theme_white">
+            <h4 class="table__heading table__heading_theme_white">86 миллиардов</h4>
+            <p class="table__text table__text_theme_white">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_white">
+            <h4 class="table__heading table__heading_theme_white">2.1 миллиарда</h4>
+            <p class="table__text table__text_theme_white">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell table__cell_theme_white">
+            <h4 class="table__heading table__heading_theme_white">1000 терабайт</h4>
+            <p class="table__text table__text_theme_white">Объём памяти человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_white">
+            <h4 class="table__heading table__heading_theme_white">500 триллионов</h4>
+            <p class="table__text table__text_theme_white">Число ответственных за обучение нервных синапсов у взрослого
+              человека</p>
+          </li>
+          <li class="table__cell table__cell_theme_white">
+            <h4 class="table__heading table__heading_theme_white">420 миллионов</h4>
+            <p class="table__text table__text_theme_white">Число взрослых людей моложе 25 лет, не имеющих образования
+              для трудоустройства</p>
+            <p class="table__text table__text_theme_white">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell table__cell_theme_white">
+            <h4 class="table__heading table__heading_theme_white">17–20 лет</h4>
+            <p class="table__text table__text_theme_white">Пик обучаемости</p>
+          </li>
+          <li class="table__cell table__cell_theme_white">
+            <h4 class="table__heading table__heading_theme_white">1885 год</h4>
+            <p class="table__text table__text_theme_white">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell table__cell_theme_white">
+            <h4 class="table__heading table__heading_theme_white">1889 год</h4>
+            <p class="table__text table__text_theme_white">Открытие условного рефлекса</p>
+          </li>
         </ul>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img class="feynman__illustration" src="./images/feynman.png"  alt="Фейнман">
+        <img class="feynman__illustration" src="./images/feynman.png" alt="Фейнман">
       </section>
       <section class="kaufman">
-          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-          <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-          <ul class="table table_theme_dark">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
             <p class="table__text table__text_theme_dark"> Выберите привлекательный проект.</p>
@@ -115,7 +123,8 @@
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">9</h4>
-            <p class="table__text table__text_theme_dark"> Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme_dark"> Занимайтесь по расписанию, короткими интенсивными
+              интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">10</h4>
@@ -124,41 +133,40 @@
         </ul>
         <div class="kaufman__triangle"></div>
       </section>
-        </main>
-        <footer class="footer">
-          <div class="footer__columns">
-            <div class="footer__column footer__column_content_copyright">
-              <div class="logo__place_footer"></div>
-              <p class="footer__author"> &copy Медовник Даниил</p>
-            </div>
-
-            <nav class="footer__column footer__column_content_info">
-            <h3 class="footer__column-heading"> О практикуме</h3>
-              <ul class="footer__column-links">
-               <li><a href="#" class="footer__column-link">Главная</a></li>
-                <li><a href="#" class="footer__column-link">Концепция</a></li>
-                <li><a href="#" class="footer__column-link">Наставники</a></li>
-                </ul>
-              </nav>
-            <div class=" footer__column footer__column_content_social">
-            <h3 class="footer__column-heading"> Соцсети</h3>
-              <ul class="footer__column-links">
-                  <li>
-                    <a href="#" class="footer__column-link">
-                    <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="ютуб">YouTube</a>
-                </li>
-                <li>
-                  <a href="#" class="footer__column-link">
-                  <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="вконтакте">Вконтакте</a>
-                </li>
-                <li>
-                  <a href="#" class="footer__column-link">
-                  <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="тикток">TikTok</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </footer>
-    </div>
+    </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo__place_footer"></div>
+          <p class="footer__author"> &copy Медовник Даниил</p>
+        </div>
+        <nav class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading"> О практикуме</h3>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link">Главная</a></li>
+            <li><a href="#" class="footer__column-link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link">Наставники</a></li>
+          </ul>
+        </nav>
+        <div class=" footer__column footer__column_content_social">
+          <h3 class="footer__column-heading"> Соцсети</h3>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="footer__column-link">
+                <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="ютуб">YouTube</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="вконтакте">Вконтакте</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="тикток">TikTok</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
