--- a/index.html
+++ b/index.html
@@ -37,6 +37,61 @@
           </div>
         </div>
       </section>
+      <section class="techniques">
+        <h2 class="section-title section-title_techniques">Техники обучения</h2>
+        <h3 class="section-subtitle section-subtitle_techniques">Пять практик от Барбары Оакли</h3>
+        <ul class="cards cards_techniques">
+          <li class="cards__item cards__item_techniques">
+            <img class="cards__image" src="./images/cards-attention.png" alt="практика-внимание">
+            <h4 class="cards__title cards__title_techniques">Два вида внимания</h4>
+            <p class="cards__description cards__description_techniques">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item cards__item_techniques">
+            <img class="cards__image" src="./images/cards-recall.png" alt="практика-вcпоминать">
+            <h4 class="cards__title cards__title_techniques">Recall</h4>
+            <p class="cards__description cards__description_techniques">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item cards__item_techniques">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="практика-интерливинг">
+            <h4 class="cards__title cards__title_techniques">Интерливинг</h4>
+            <p class="cards__description cards__description_techniques">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item cards__item_techniques">
+            <img class="cards__image" src="./images/cards-question.png" alt="практика-вопросы">
+            <h4 class="cards__title cards__title_techniques">Вопросы</h4>
+            <p class="cards__description cards__description_techniques">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item cards__item_techniques">
+            <img class="cards__image" src="./images/cards-competence.png" alt="практика-компетентности">
+            <h4 class="cards__title cards__title_techniques">Иллюзия компетентности</h4>
+            <p class="cards__description cards__description_techniques">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title section-title_video">Видео нa TED</h2>
+        <h3 class="section-subtitle section-subtitle_video">Для тех, кто любит прокрастинировать</h3>
+        <div class="iframe_section_video">
+        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+        src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+        src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <img class="feynman__illustration" src="./images/feynman.png" alt="Фейнман">
+      </section>
       <section class="digits">
         <h2 class="section-title section-title_theme_white"> Цифры и факты</h2>
         <h3 class="section-subtitle section-subtitle_theme_white"> Про учебу и мозг</h3>
@@ -79,11 +134,18 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img class="feynman__illustration" src="./images/feynman.png" alt="Фейнман">
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Салман Хан</h2>
+          <h3 class="khan__title">Весь мир — школа</h3>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="книга Салман Хан, Весь мир - школа">
+            <a class="khan__buy-link" href="#"> Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -132,6 +194,24 @@
           </li>
         </ul>
         <div class="kaufman__triangle"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title section-title_resources">Полезные ресурсы</h2>
+        <h3 class="section-subtitle section-subtitle_resources">Больше материалов о техниках и лайфхаках обучения</h3>
+        <nav class="resources__logo_zone">
+          <a class="resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="арзамас">
+          </a>
+          <a class="resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="н+1">
+          </a>
+          <a class="resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="стрелка">
+          </a>
+          <a class="resources__link" href="#">
+            <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="полка">
+          </a>
+        </nav>
       </section>
     </main>
     <footer class="footer">
