--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/pages.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo_place_header"></div>
+      <div class="header__logo"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="мальчик получил двойку">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -71,11 +70,11 @@
       <section class="video">
         <h2 class="section-title section-title_video">Видео нa TED</h2>
         <h3 class="section-subtitle section-subtitle_video">Для тех, кто любит прокрастинировать</h3>
-        <div class="iframe_section_video">
+        <div class="video__iframes">
         <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
-        src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+        src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
-        src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+        src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -193,12 +192,12 @@
             <p class="table__text table__text_theme_dark"> Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title section-title_resources">Полезные ресурсы</h2>
         <h3 class="section-subtitle section-subtitle_resources">Больше материалов о техниках и лайфхаках обучения</h3>
-        <nav class="resources__logo_zone">
+        <nav class="resources__logo-zone">
           <a class="resources__link" href="#">
             <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="арзамас">
           </a>
@@ -217,7 +216,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo__place_footer"></div>
+          <div class="footer__logo"></div>
           <p class="footer__author"> &copy Медовник Даниил</p>
         </div>
         <nav class="footer__column footer__column_content_info">
