--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
         <h2 class="section-title section-title_video">Видео нa TED</h2>
         <h3 class="section-subtitle section-subtitle_video">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
-        src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
-        src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -217,7 +215,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="footer__logo"></div>
-          <p class="footer__author"> &copy Медовник Даниил</p>
+          <p class="footer__author"> &copy; Медовник Даниил</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading"> О практикуме</h3>
