--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <h2 class="section-title section-title_video">Видео нa TED</h2>
         <h3 class="section-subtitle section-subtitle_video">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="5MgBikgcWnY" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="arj7oStGLkU" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
